--- a/bird.html
+++ b/bird.html
@@ -1,3 +1,10 @@
+<!--
+ * @Author: Li
+ * @Date: 2025-04-16 16:08:55
+ * @LastEditors: Li
+ * @LastEditTime: 2025-04-17 15:22:49
+ * @Description: 
+-->
 <!doctype html>
 <html>
 <head>
@@ -33,6 +40,18 @@
 				<hr>
 				<video controls>  
 					<source src="images/bdv.mp4" type="video/mp4">
+				</video>
+
+				<h2 style="margin-top: 15px;">灰椋鸟在农业中的作用</h2>
+				<hr>
+				<video controls>  
+					<source src="images/4.mp4" type="video/mp4">
+				</video>
+
+				<h2 style="margin-top: 15px;">鸟类标本的制作方法（以鹌鹑为例）</h2>
+				<hr>
+				<video controls>  
+					<source src="images/5.mp4" type="video/mp4">
 				</video>
 				<p>分类与保护：<br>&nbsp;&nbsp;灰椋鸟（学名：原属Sturnus，部分研究归为Spodiopsar cineraceus），是雀形目椋鸟科椋鸟属鸟类，被列入中国国家林业局发布的《国家保护的有益的或者有重要经济、科学研究价值的陆生野生动物名录》（“三有”动物）。</p> 
 				<p>形态特征：<br>&nbsp;&nbsp;体长约18-24厘米，体型适中。通体主要为灰褐色，羽毛质地柔软。头部上黑下白，形成明显对比，嘴橙红色（幼鸟较暗淡），尖端黑色，呈圆锥状，适合啄食各类食物；脚橙黄色，强健有力，便于在树枝、地面活动。雌鸟头部灰色区域更多，羽色对比弱于雄鸟；雄鸟头侧白色羽斑更明显，羽毛光泽度略强，繁殖期雄鸟头部黑色具金属光泽，求偶展示时更具优势，非繁殖期灰褐色。</p>
