--- a/butterfly.html
+++ b/butterfly.html
@@ -1,3 +1,10 @@
+<!--
+ * @Author: Li
+ * @Date: 2025-04-16 16:08:55
+ * @LastEditors: Li
+ * @LastEditTime: 2025-04-17 15:24:16
+ * @Description: 
+-->
 <!doctype html>
 <html>
 <head>
@@ -28,12 +35,26 @@
 			<img src="images/bf4.jpg" alt="Description of the image"> 
 			</div>  
 			<div class="right">
-				<h2>大紫蛱蝶</h2>
+				<h2>大紫蝴蝶</h2>
 				<hr>
 				<video controls>  
-				<source src="images/bfv.mp4" type="video/mp4">
-				<div class="video-duration">00:00</div> <!-- 自定义时长显示 -->  
-			</video> 
+				  <source src="images/1.mp4" type="video/mp4">
+				  <div class="video-duration">00:00</div> <!-- 自定义时长显示 -->  
+			    </video> 
+
+				<h2 style="margin-top: 15px;">蝴蝶标本制作方法</h2>
+				<hr>
+				<video controls>  
+				  <source src="images/2.mp4" type="video/mp4">
+				  <div class="video-duration">00:00</div> <!-- 自定义时长显示 -->  
+			    </video> 
+
+				<h2 style="margin-top: 15px;">大紫蛱蝶在农业中的作用</h2>
+				<hr>
+				<video controls>  
+				  <source src="images/3.mp4" type="video/mp4">
+				  <div class="video-duration">00:00</div> <!-- 自定义时长显示 -->  
+			    </video> 
 				<p>分类与保护：<br>&nbsp;&nbsp;大紫蛱蝶（学名：Sasakia charonda），隶属鳞翅目蛱蝶科紫蛱蝶属，是一种大型且极具观赏价值的蝴蝶，被列入中国《国家重点保护野生动物名录》（2021年版）二级 ，其为日本国蝶。</p> 
 			  <p>形态特征：<br>&nbsp;&nbsp;雄蝶翅展约86-110毫米，雌蝶稍大，翅展90-120毫米（部分个体可达130毫米）。躯体较为粗壮，体表覆盖着细密的鳞片。其翅膀底色呈黑褐色，布满白色斑带。最显著的特征是前翅基部至中部以及后翅大部分区域呈现出美丽的紫色光泽，这是由特殊的鳞片结构对光线反射和折射形成，在阳光下尤为夺目。幼虫体表密布枝刺，成虫触角细长，端部膨大，呈棒状，有助于它在飞行时感受周围环境的振动变化。</p>
 				<p>分布范围与栖息地：<br>&nbsp;&nbsp;在中国，主要分布于东北（黑龙江、吉林、辽宁）、华北（北京、河北）、华中（河南、湖北）、华东（浙江）等地，西南地区（如四川）记录较少且分散。国际上，广泛分布于俄罗斯、朝鲜、韩国、日本等亚洲国家。大紫蛱蝶主要栖息在海拔500-2000米的山地森林中，这里植被丰富，郁闭度较高，为其提供了充足的食物和适宜的生存环境。尤其偏好有朴树等榆科植物分布的区域，因为这些植物是其幼虫的主要食物来源。同时，林内的溪流、湿地附近也是它们常出现的地方，成虫可在此获取水分和矿物质。</p>
