--- a/butterfly.html
+++ b/butterfly.html
@@ -35,7 +35,7 @@
 			<img src="images/bf4.jpg" alt="Description of the image"> 
 			</div>  
 			<div class="right">
-				<h2>大紫蝴蝶</h2>
+				<h2>大紫蛱蝶</h2>
 				<hr>
 				<video controls>  
 				  <source src="images/1.mp4" type="video/mp4">
