--- a/pages/index.html
+++ b/pages/index.html
@@ -54,6 +54,7 @@
                     <div class="card-text">
                         <h3>寺名由来</h3>
                         <p>青林寺村的得名，源于村中的一座寺庙——青林寺。此寺始建于盛唐时期，已有1300多年历史。寺内古木参天，青石板路两侧点缀着碑亭、牌坊等古迹，香火旺盛。寺内供奉着弥勒佛，每逢佛事活动更是香客云集、热闹非凡。相传南宋理学家朱熹曾在此与和尚对弈谜语，明代医学家李时珍也曾来此求医问药，并留下"朱子来此弄禅机，李时珍来此采药汤"的对联，为这座千年古寺增添了几分文人雅趣。</p>
+                        <a style="margin-top: 30px;display:inline-block;" href="https://sxyc.qj720.cn/vr/qinglinmizhen.html">点击进入青林秘真VR之旅</a>
                     </div>
                 </div>
 
